# serializer version: 1
# name: test_sensor[sensor.energyzero_today_energy_average_price-today_energy_average_price-today_energy]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by EnergyZero',
      'friendly_name': 'Energy market price Average - today',
      'unit_of_measurement': '€/kWh',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.energyzero_today_energy_average_price',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.37',
  })
# ---
# name: test_sensor[sensor.energyzero_today_energy_average_price-today_energy_average_price-today_energy].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.energyzero_today_energy_average_price',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Average - today',
    'platform': 'energyzero',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'average_price',
    'unit_of_measurement': '€/kWh',
  })
# ---
# name: test_sensor[sensor.energyzero_today_energy_average_price-today_energy_average_price-today_energy].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': <DeviceEntryType.SERVICE: 'service'>,
    'hw_version': None,
    'id': <ANY>,
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'EnergyZero',
    'model': None,
    'name': 'Energy market price',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_sensor[sensor.energyzero_today_energy_current_hour_price-today_energy_current_hour_price-today_energy]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by EnergyZero',
      'friendly_name': 'Energy market price Current hour',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '€/kWh',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.energyzero_today_energy_current_hour_price',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.49',
  })
# ---
# name: test_sensor[sensor.energyzero_today_energy_current_hour_price-today_energy_current_hour_price-today_energy].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.energyzero_today_energy_current_hour_price',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Current hour',
    'platform': 'energyzero',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'current_hour_price',
    'unit_of_measurement': '€/kWh',
  })
# ---
# name: test_sensor[sensor.energyzero_today_energy_current_hour_price-today_energy_current_hour_price-today_energy].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': <DeviceEntryType.SERVICE: 'service'>,
    'hw_version': None,
    'id': <ANY>,
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'EnergyZero',
    'model': None,
    'name': 'Energy market price',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_sensor[sensor.energyzero_today_energy_highest_price_time-today_energy_highest_price_time-today_energy]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by EnergyZero',
      'device_class': 'timestamp',
      'friendly_name': 'Energy market price Time of highest price - today',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.energyzero_today_energy_highest_price_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2022-12-07T16:00:00+00:00',
  })
# ---
# name: test_sensor[sensor.energyzero_today_energy_highest_price_time-today_energy_highest_price_time-today_energy].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.energyzero_today_energy_highest_price_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Time of highest price - today',
    'platform': 'energyzero',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'highest_price_time',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.energyzero_today_energy_highest_price_time-today_energy_highest_price_time-today_energy].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': <DeviceEntryType.SERVICE: 'service'>,
    'hw_version': None,
    'id': <ANY>,
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'EnergyZero',
    'model': None,
    'name': 'Energy market price',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_sensor[sensor.energyzero_today_energy_hours_priced_equal_or_lower-today_energy_hours_priced_equal_or_lower-today_energy]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by EnergyZero',
      'friendly_name': 'Energy market price Hours priced equal or lower than current - today',
      'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.energyzero_today_energy_hours_priced_equal_or_lower',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '23',
  })
# ---
# name: test_sensor[sensor.energyzero_today_energy_hours_priced_equal_or_lower-today_energy_hours_priced_equal_or_lower-today_energy].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.energyzero_today_energy_hours_priced_equal_or_lower',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hours priced equal or lower than current - today',
    'platform': 'energyzero',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'hours_priced_equal_or_lower',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensor[sensor.energyzero_today_energy_hours_priced_equal_or_lower-today_energy_hours_priced_equal_or_lower-today_energy].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': <DeviceEntryType.SERVICE: 'service'>,
    'hw_version': None,
    'id': <ANY>,
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'EnergyZero',
    'model': None,
    'name': 'Energy market price',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_sensor[sensor.energyzero_today_energy_max_price-today_energy_max_price-today_energy]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by EnergyZero',
      'friendly_name': 'Energy market price Highest price - today',
      'unit_of_measurement': '€/kWh',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.energyzero_today_energy_max_price',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.55',
  })
# ---
# name: test_sensor[sensor.energyzero_today_energy_max_price-today_energy_max_price-today_energy].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.energyzero_today_energy_max_price',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Highest price - today',
    'platform': 'energyzero',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'max_price',
    'unit_of_measurement': '€/kWh',
  })
# ---
# name: test_sensor[sensor.energyzero_today_energy_max_price-today_energy_max_price-today_energy].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': <DeviceEntryType.SERVICE: 'service'>,
    'hw_version': None,
    'id': <ANY>,
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'EnergyZero',
    'model': None,
    'name': 'Energy market price',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_sensor[sensor.energyzero_today_gas_current_hour_price-today_gas_current_hour_price-today_gas]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by EnergyZero',
      'friendly_name': 'Gas market price Current hour',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '€/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.energyzero_today_gas_current_hour_price',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.47',
  })
# ---
# name: test_sensor[sensor.energyzero_today_gas_current_hour_price-today_gas_current_hour_price-today_gas].1
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.energyzero_today_gas_current_hour_price',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Current hour',
    'platform': 'energyzero',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'current_hour_price',
    'unit_of_measurement': '€/m³',
  })
# ---
# name: test_sensor[sensor.energyzero_today_gas_current_hour_price-today_gas_current_hour_price-today_gas].2
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': <DeviceEntryType.SERVICE: 'service'>,
    'hw_version': None,
    'id': <ANY>,
    'is_new': False,
    'labels': set({
    }),
    'manufacturer': 'EnergyZero',
    'model': None,
    'name': 'Gas market price',
    'name_by_user': None,
    'serial_number': None,
    'suggested_area': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
